--- a/advGAN.ipynb
+++ b/advGAN.ipynb
@@ -518,10 +518,6 @@
     "y_fake = np.zeros((BATCH_SIZE, 1))\n",
     "\n",
     "# Targeted Attack\n",
-    "# target_label = 0\n",
-    "# target_prediction = np.zeros(10)\n",
-    "# target_prediction[target_label] = 1\n",
-    "# target_prediction = np.array([target_prediction]*BATCH_SIZE)\n",
     "\n",
     "target_prediction = np.zeros([BATCH_SIZE, 1])\n",
     "\n",
@@ -592,6 +588,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# To use same models as in paper\n",
+    "\n",
     "model = tf.keras.models.load_model(\"models/mnist_classifier__report.h5\")\n",
     "discriminator = tf.keras.models.load_model(\"models/mnist_adv_discriminator_t0__report.h5\")      \n",
     "adv_generator = tf.keras.models.load_model(\"models/mnist_adv_generator_t0__report.h5\")"
@@ -658,7 +656,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Baseline for attack (% of 0s in test)\n",
+    "# Baseline for attack (% classified as 0s in test)\n",
     "model.evaluate(test_X, np.zeros(len(test_X)))"
    ]
   },
