--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -123,7 +123,7 @@
     "    \n",
     "    return Model(input, img, name=\"generator\")\n",
     "\n",
-    "def create_discriminator(img_shape, verbose=True):\n",
+    "def create_discriminator(img_shape):\n",
     "    # Create a CNN model\n",
     "    model = Sequential(name=\"discriminator\")\n",
     "\n",
