--- a/advGAN.ipynb
+++ b/advGAN.ipynb
@@ -45,7 +45,7 @@
     "from art.attacks.evasion import FastGradientMethod, ProjectedGradientDescent, CarliniL2Method, CarliniL0Method\n",
     "from art.estimators.classification import KerasClassifier\n",
     "\n",
-    "tf.compat.v1.disable_eager_execution()      # Enable when training NN but has to be disabled for art\n",
+    "# tf.compat.v1.disable_eager_execution()      # Enable when training NN but has to be disabled for art\n",
     "print(tf.config.list_physical_devices('GPU'))"
    ]
   },
@@ -313,6 +313,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MNIST"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -340,13 +348,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CIFAR-10"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load dataset\n",
-    "import ssl\n",
+    "# import ssl\n",
     "# ssl._create_default_https_context = ssl._create_unverified_context\n",
     "\n",
     "# (train_X, train_y), (test_X, test_y) = cifar10.load_data()\n",
@@ -392,7 +408,6 @@
    "outputs": [],
    "source": [
     "optimizer = tf.optimizers.Adam()\n",
-    "# optimizer = tf.compat.v1.train.AdamOptimizer()\n",
     "\n",
     "model = create_classifier(IMG_SHAPE, NUM_CLASSES)\n",
     "model.compile(optimizer=optimizer, loss=SparseCategoricalCrossentropy(from_logits=True), metrics=[\"accuracy\"])\n",
@@ -594,212 +609,6 @@
     "discriminator = tf.keras.models.load_model(\"models/mnist_adv_discriminator_t0__report.h5\")      \n",
     "adv_generator = tf.keras.models.load_model(\"models/mnist_adv_generator_t0__report.h5\")"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Attack"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "perturbations = adv_generator.predict(test_X, verbose = 1)\n",
-    "advGAN_test_X = np.add(test_X, perturbations)\n",
-    "advGAN_test_X = np.clip(advGAN_test_X, 0, 1) # Values in image is [0,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.evaluate(advGAN_test_X, np.zeros([len(advGAN_test_X), 1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_attack(test_X, advGAN_test_X, model)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Other Attacks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Have to convert classifier model to art\n",
-    "clf = KerasClassifier(model=model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Baseline for attack (% classified as 0s in test)\n",
-    "model.evaluate(test_X, np.zeros(len(test_X)))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. FGM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fast_gradient_method_attack(x_test, clf):\n",
-    "    # MNIST params: eps=0.03, 10 steps\n",
-    "    # CIFAR-10 params: eps=0.01, 10 steps\n",
-    "    FGM = FastGradientMethod(clf, eps=0.03, targeted=True, batch_size=32)\n",
-    "\n",
-    "    # Targeted Attack\n",
-    "    target_prediction = np.zeros([len(x_test), 1])\n",
-    "\n",
-    "    FGM_test_X = FGM.generate(x_test, target_prediction)\n",
-    "    for step in range(10):\n",
-    "        FGM_test_X = FGM.generate(FGM_test_X, target_prediction)\n",
-    "\n",
-    "    return FGM_test_X\n",
-    "\n",
-    "FGM_test_X = fast_gradient_method_attack(test_X, clf)\n",
-    "model.evaluate(FGM_test_X, np.zeros(len(FGM_test_X)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_attack(test_X, FGM_test_X, model)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. PGD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def projected_gradient_descent_attack(x_test, clf):\n",
-    "    # MNIST params: max_iter=10, eps_step=0.05, eps=0.3\n",
-    "    # CIFAR-10 params: max_iter=10, eps_step=0.01, eps=0.1, \n",
-    "    PGD = ProjectedGradientDescent(clf, targeted=True, max_iter=10, eps_step=0.05, eps=0.3, verbose=False)\n",
-    "\n",
-    "    # Targeted Attack\n",
-    "    target_prediction = np.zeros([len(x_test), 1])\n",
-    "\n",
-    "    PGD_test_X = PGD.generate(x_test, target_prediction)\n",
-    "\n",
-    "    return PGD_test_X\n",
-    "\n",
-    "PGD_test_X = projected_gradient_descent_attack(test_X, clf)\n",
-    "model.evaluate(PGD_test_X, np.zeros(len(PGD_test_X)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_attack(test_X, PGD_test_X, model)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Defence"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Binary Input detector (discriminator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class BinaryInputDetector():\n",
-    "    def __init__(self, detector, target_model):\n",
-    "        self._detector = detector\n",
-    "        self._target_model = target_model\n",
-    "    \n",
-    "    def predict(self, array):\n",
-    "        prediction = []\n",
-    "        \n",
-    "        for element in array:\n",
-    "            if self._detector.predict(np.array([element]))[0][0] < 0.5:\n",
-    "                # Advesary\n",
-    "                prediction.append(-1)\n",
-    "            else:\n",
-    "                # Real\n",
-    "                p = self._target_model.predict(np.array([element]))\n",
-    "                p_id = np.argmax(p)\n",
-    "                prediction.append(p_id)\n",
-    "        \n",
-    "        adv_rate = prediction.count(-1)/len(prediction)\n",
-    "        return np.array(prediction), adv_rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "discriminator = tf.keras.models.load_model(\"models/mnist_discriminator__report.h5\")  # For normal GAN BID\n",
-    "BID = BinaryInputDetector(discriminator, model)\n",
-    "\n",
-    "y_pred_BASE, adv_rate_BASE = BID.predict(test_X)\n",
-    "y_pred_FGM, adv_rate_FGM = BID.predict(FGM_test_X)\n",
-    "y_pred_PGD, adv_rate_PGD = BID.predict(PGD_test_X)\n",
-    "y_pred_advGAN , adv_rate_advGAN  = BID.predict(advGAN_test_X)\n",
-    "\n",
-    "print(f\"Adv rates: BASE: {adv_rate_BASE}, FGM: {adv_rate_FGM}, PGD: {adv_rate_PGD}, advGAN: {adv_rate_advGAN}\")"
-   ]
   }
  ],
  "metadata": {
@@ -818,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
